--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Lost Expedition</title>
+    <title>Terminal Game</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="terminal">
-        <div id="output"></div>
-        <input type="text" id="input" autocomplete="off" />
-    </div>
+    <div id="output" class="terminal-output"></div>
+    <input type="text" id="input" class="terminal-input" autofocus>
+
+    <!-- Typing sound effect -->
+    <audio id="typingSound" src="A1.mp3" preload="auto"></audio>
+
     <script src="script.js"></script>
 </body>
 </html>
